--- a/certificates.html
+++ b/certificates.html
@@ -1,236 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dhruv Joshi | Certificates & Workshops</title>
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    .cert-card {
-      background: #fff;
-      max-width: 900px;
-      width: 100%;
-      margin: 3em auto 0 auto;
-      border-radius: 16px;
-      box-shadow: 0 4px 28px rgba(40, 60, 90, 0.13),
-        0 1.5px 3.5px rgba(39, 59, 86, 0.07);
-      padding: 3em 3em 2.5em 3em;
-    }
-    .cert-title {
-      font-size: 2em;
-      font-weight: 700;
-      margin-bottom: 1.4em;
-      letter-spacing: 0.5px;
-    }
-    .cert-item {
-      margin-bottom: 1.3em;
-    }
-    .cert-item h3 {
-      font-size: 1.15em;
-      font-weight: 600;
-      color: #1c2f5a;
-      margin: 0 0 0.25em 0;
-    }
-    .cert-item p {
-      font-size: 1.05em;
-      line-height: 1.6;
-      color: #333;
-      margin: 0;
-    }
-    hr {
-      border: none;
-      height: 1px;
-      background: #e3e9f2;
-      margin: 2em 0;
-    }
-    @media (max-width: 950px) {
-      .cert-card {
-        max-width: 95vw;
-        padding: 1.5em 1em;
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; url=./#certificates" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Certificates – Dhruv Joshi</title>
+    <style>
+      body {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+        margin: 0;
+        padding: 2rem;
+        background: #020617;
+        color: #e5e7eb;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
       }
-    }
-    /* Highlight for active page */
-    header nav ul li a.active {
-      color: #58a4ff;
-      border-bottom: 2px solid #58a4ff;
-      font-weight: 700;
-    }
-    header nav {
-      background: #273b56;
-      text-align: center;
-      box-shadow: 0 2px 8px rgba(39, 59, 86, 0.03);
-    }
-    header nav ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: inline-flex;
-    }
-    header nav ul li {
-      margin: 0 1.5em;
-    }
-    header nav ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 500;
-      padding: 1.3em 0;
-      display: block;
-      transition: color 0.2s;
-    }
-    header nav ul li a:hover {
-      color: #58a4ff;
-      border-bottom: 2px solid #58a4ff;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Introduction</a></li>
-        <li><a href="experience.html">Experience</a></li>
-        <li><a href="projects.html">Professional Projects</a></li>
-        <li><a href="knowledge.html">Knowledge Roadmap</a></li>
-        <li><a href="certificates.html" class="active">Certificates & Workshops</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <div class="cert-card">
-      <div class="cert-title">Certificates & Workshops</div>
-
-      <div class="cert-item">
-        <h3>Artificial Intelligence by Google</h3>
-        <p>
-          Comprehensive introduction to AI concepts, machine learning
-          algorithms, and practical AI application development under Google's
-          renowned curriculum.
-        </p>
-      </div>
-
-      <div class="cert-item">
-        <h3>Machine Learning by Google</h3>
-        <p>
-          An in-depth course focusing on supervised and unsupervised learning,
-          model evaluation, and real-world machine learning pipelines taught by
-          Google experts.
-        </p>
-      </div>
-
-      <div class="cert-item">
-        <h3>Azure Webinar at Toronto Microsoft</h3>
-        <p>
-          Hands-on webinar covering Microsoft Azure cloud platform for AI and ML
-          workloads, including deployment pipelines, scaling, and cloud-native
-          AI services.
-        </p>
-      </div>
-
-      <div class="cert-item">
-        <h3>Ethical Hacking</h3>
-        <p>
-          Training in cybersecurity fundamentals and ethical penetration
-          testing techniques to identify vulnerabilities and enhance system
-          security.
-        </p>
-      </div>
-
-      <div class="cert-item">
-        <h3>Bug Bounty Hunting</h3>
-        <p>
-          Learned practical methods to discover software vulnerabilities and
-          responsibly disclose for rewards, focusing on web and mobile
-          platforms.
-        </p>
-      </div>
-
-      <div class="cert-item">
-        <h3>Cyber Security</h3>
-        <p>
-          Broad exploration of digital security principles including threat
-          modeling, cryptography, and defensive best practices for enterprise
-          environments.
-        </p>
-      </div>
-
-      <div class="cert-item">
-        <h3>Facebook Security Quiz</h3>
-        <p>
-          Participated in an industry-recognized security knowledge assessment
-          emphasizing privacy, threat detection, and ethical responsibilities.
-        </p>
-      </div>
-
-      <div class="cert-item">
-        <h3>Data Visualization Techniques</h3>
-        <p>
-          Course focusing on effective data visualization methods using Power BI,
-          Tableau, and Python visualization libraries to create compelling insights.
-        </p>
-      </div>
-
-      <div class="cert-item">
-        <h3>SQL for Data Analysis</h3>
-        <p>
-          Mastered SQL querying and data manipulation skills critical for
-          efficient data exploration and reporting tasks in data science projects.
-        </p>
-      </div>
-
-      <div class="cert-item">
-        <h3>Introduction to Data Science</h3>
-        <p>
-          Fundamental concepts in data science including statistics, data
-          wrangling, and exploratory data analysis, preparing foundations for
-          advanced ML.
-        </p>
-      </div>
-
-      <div class="cert-item">
-        <h3>Tableau for Data Visualization</h3>
-        <p>
-          Hands-on training building interactive dashboards and visual analytics
-          in Tableau for diverse business intelligence applications.
-        </p>
-      </div>
-
-      <div class="cert-item">
-        <h3>Techie Guru (AI Bot Challenges)</h3>
-        <p>
-          Engaged in AI challenges focused on chatbot design, natural language
-          processing, and interactive dialogue systems.
-        </p>
-      </div>
-
-      <div class="cert-item">
-        <h3>PLC Workshop Excel for Data Analysis</h3>
-        <p>
-          Practical workshop covering Excel-based data analysis with PLC
-          integration for automation and manufacturing process optimization.
-        </p>
-      </div>
-
-      <div class="cert-item">
-        <h3>Statistical Analysis with R</h3>
-        <p>
-          Advanced training on statistical techniques including hypothesis
-          testing, regression, and data modeling using R programming.
-        </p>
-      </div>
-
-      <div class="cert-item">
-        <h3>Start-Ups and Entrepreneurship and Data Analysis with Python</h3>
-        <p>
-          Explored startup ecosystem fundamentals alongside Python-driven data
-          analysis and visualization for effective business decision-making.
-        </p>
-      </div>
+      a {
+        color: #38bdf8;
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+      .card {
+        max-width: 480px;
+        background: #020617;
+        border-radius: 1rem;
+        border: 1px solid rgba(148, 163, 184, 0.5);
+        padding: 1.5rem 1.75rem;
+        box-shadow: 0 18px 40px rgba(15, 23, 42, 0.85);
+      }
+      h1 {
+        font-size: 1.2rem;
+        margin: 0 0 0.5rem;
+      }
+      p {
+        margin: 0.25rem 0;
+        font-size: 0.9rem;
+      }
+    </style>
+    <script>
+      window.location.href = "./#certificates";
+    </script>
+  </head>
+  <body>
+    <div class="card">
+      <h1>Redirecting to Education & Certificates</h1>
+      <p>You should be redirected automatically to my Education & Certificates section.</p>
+      <p>
+        If not, <a href="./#certificates">click here to view my certificates</a>.
+      </p>
     </div>
-  </main>
-
-  <footer>
-    <p>©2025 Dhruv Joshi</p>
-  </footer>
-</body>
+  </body>
 </html>
