--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Dhruv Joshi | ML & GenAI Engineer</title>
   <meta name="description" content="Dhruv Joshi – ML Engineer & GenAI Engineer designing and deploying production-grade ML, MLOps, and LLM/RAG systems on GCP, Kubernetes, and Vertex AI." />
 
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
