--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dhruv Joshi | ML & GenAI Engineer</title>
+  <title>Dhruv Joshi | AI/ML & GenAI Engineer</title>
   <meta name="description" content="Dhruv Joshi – ML Engineer & GenAI Engineer designing and deploying production-grade ML, MLOps, and LLM/RAG systems on GCP, Kubernetes, and Vertex AI." />
 
   <!-- Favicon -->
@@ -41,7 +41,7 @@
     <section class="hero" id="about">
       <div class="container hero-grid">
         <div class="hero-text">
-          <p class="hero-kicker">Machine Learning Engineer · GenAI · MLOps</p>
+          <p class="hero-kicker">AI/ML Engineer · GenAI · Prompt Engineer</p>
           <h1>Shipping reliable ML and GenAI systems from notebook to production.</h1>
           <p class="hero-subtitle">
             Machine Learning Engineer with 3+ years of hands-on experience designing, building, and operating production-grade ML, Deep Learning, and LLM/RAG systems. I specialize in GCP, Vertex AI, Kubernetes, and CI/CD-driven MLOps that keep models reliable, observable, and cost-efficient in real products across healthcare, finance, and B2B SaaS.[file:98]
