--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <p class="hero-kicker">AI/ML Engineer · GenAI · Prompt Engineer</p>
           <h1>Shipping reliable ML and GenAI systems from notebook to production.</h1>
           <p class="hero-subtitle">
-            Machine Learning Engineer with 3+ years of hands-on experience designing, building, and operating production-grade ML, Deep Learning, and LLM/RAG systems. I specialize in GCP, Vertex AI, Kubernetes, and CI/CD-driven MLOps that keep models reliable, observable, and cost-efficient in real products across healthcare, finance, and B2B SaaS.[file:98]
+             Machine Learning Engineer with 3+ years of hands-on experience designing, building, and deploying production-grade ML, Deep Learning, and Generative AI systems for enterprise financial and healthcare clients, including TD Bank, RBC, and Quest Diagnostics. I specialize in LLM engineering, RAG pipelines, and agentic AI workflows, alongside traditional ML (Computer Vision, NLP, Recommendation Systems), and have shipped models serving 1,000+ concurrent users with sub-100ms latency and 99.2% uptime in Kubernetes-based environments. My core stack includes Python, PyTorch, TensorFlow, FastAPI, and cloud platforms like AWS and GCP (Vertex AI, SageMaker), with strong MLOps foundations in CI/CD for ML, MLflow, model monitoring, drift detection, and automated retraining. I enjoy translating complex ML concepts into clear business value, collaborating with cross-functional teams, and owning the end-to-end lifecycle from data and modeling through deployment, observability, and continuous improvement.
           </p>
           <div class="hero-highlights">
             <div class="hero-pill">97.7% ROC-AUC cancer detection model deployed into clinical workflow.[file:98]</div>
