--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       <div class="container hero-grid">
         <div class="hero-text">
           <p class="hero-kicker">AI/ML Engineer · GenAI · Prompt Engineer</p>
-          <h1>Shipping reliable ML and GenAI systems from notebook to production.</h1>
+          <h1>AI is not just a tool for automation; it's an enabler for augmentation.</h1>
+          <h2>I have always been convinced that the only way to get artificial intelligence to work is to do the computation in a way similar to the human brain. -- Geoffrey Hinton</h2>
           <p class="hero-subtitle">
              Machine Learning Engineer with 3+ years of hands-on experience designing, building, and deploying production-grade ML, Deep Learning, and Generative AI systems for enterprise financial and healthcare clients, including TD Bank, RBC, and Quest Diagnostics. I specialize in LLM engineering, RAG pipelines, and agentic AI workflows, alongside traditional ML (Computer Vision, NLP, Recommendation Systems), and have shipped models serving 1,000+ concurrent users with sub-100ms latency and 99.2% uptime in Kubernetes-based environments.
           </p>
@@ -59,17 +60,17 @@
             <a href="#projects" class="btn-secondary">View Projects</a>
           </div>
           <div class="hero-meta">
-            <span>Based in Toronto / London, ON · Open to ML Engineer / MLOps / GenAI roles in Toronto & Remote.[file:98]</span>
+            <span>Based in Toronto, ON · Open to AI Engineer / ML Engineer / Prompt Engineer / MLOps / GenAI roles in Toronto & Remote.</span>
           </div>
         </div>
         <div class="hero-card">
           <div class="hero-card-inner">
             <p class="hero-card-title">Quick Snapshot</p>
             <ul class="hero-card-list">
-              <li><span>Role:</span> ML Engineer · MLOps Engineer · GenAI Engineer[file:98]</li>
-              <li><span>Experience:</span> 4+ years building production ML & GenAI systems[file:98]</li>
-              <li><span>Strengths:</span> LLMs & RAG, MLOps on GCP, scalable APIs, monitoring & reliability[file:98]</li>
-              <li><span>Domains:</span> Healthcare (cancer detection), fintech/insurtech, B2B analytics[file:98]</li>
+              <li><span>Role:</span> AI Engineer ● ML Engineer ● Prompt Engineer ● MLOps ● GenAI </li>
+              <li><span>Experience:</span> 3+ years building production ML & GenAI systems </li>
+              <li><span>Strengths:</span> LLMs & RAG, MLOps on GCP, scalable APIs, monitoring & reliability </li>
+              <li><span>Domains:</span> USA/Canada Healthcare , fintech/Insurtech, B2B analytics, RegTech, EdTech, E-Comm</li>
             </ul>
             <div class="hero-card-links">
               <a href="mailto:dhruvjoshi16dj@gmail.com">Email</a>
