--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="hero-card-inner">
             <p class="hero-card-title">Quick Snapshot</p>
             <ul class="hero-card-list">
-              <li><span>Role:</span> AI Engineer ● ML Engineer ● Prompt Engineer ● MLOps ● GenAI </li>
+              <li><span>Role:</span> AI/ML Engineer ● Prompt Engineer ● MLOps ● GenAI </li>
               <li><span>Experience:</span> 3+ years building production ML & GenAI systems </li>
               <li><span>Strengths:</span> LLMs & RAG, MLOps on GCP, scalable APIs, monitoring & reliability </li>
               <li><span>Domains:</span> USA/Canada Healthcare , fintech/Insurtech, B2B analytics, RegTech, EdTech, E-Comm</li>
