--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
             <span>Based in Toronto, ON <br> Open to AI Engineer / ML Engineer / Prompt Engineer / MLOps / GenAI roles in Toronto & Remote.</span>
           </div>
         </div>
+        <br>
+        <div class="section-separator"></div>
+        <br>
         <div class="hero-card">
           <div class="hero-card-inner">
             <p class="hero-card-title">Quick Snapshot</p>
