--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
       <div class="container">
         <div class="section-header">
           <h2>Experience</h2>
-          <p>Owning the full lifecycle of ML and GenAI systems: data, modeling, MLOps, and production reliability.[file:98]</p>
+          <p>Owning the full lifecycle of ML and GenAI systems: data, modeling, MLOps, and production reliability.</p>
         </div>
 
         <div class="timeline">
           <!-- Experience 1: Senior MLOps / ML Engineer -->
           <article class="timeline-item">
             <div class="timeline-meta">
-              <h3>Senior MLOps / ML Engineer</h3>
-              <p class="timeline-company">[Current Company / Client] · Toronto, Canada (Remote/Hybrid)[file:98]</p>
-              <p class="timeline-dates">2024 – Present</p>
+              <h3>ML Engineer</h3>
+              <p class="timeline-company">Jay Analytix · Toronto, Canada · Remote</p>
+              <p class="timeline-dates">Jan, 2025 – Present</p>
             </div>
             <div class="timeline-content">
               <ul>
