--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section class="section" id="experience">
       <div class="container">
         <div class="section-header">
-          <h2>Experience</h2>
+          <h2>Professional Experience</h2>
           <p>Owning the full lifecycle of ML and GenAI systems: data, modeling, MLOps, and production reliability.</p>
         </div>
 
