--- a/index.html
+++ b/index.html
@@ -96,12 +96,45 @@
         </div>
 
         <div class="timeline">
+          <!-- Experience 1/part-02 -->
+          <article class="timeline-item">
+            <div class="timeline-meta">
+              <h3>ML Engineer</h3>
+              <p class="timeline-company">Leucistic Technologies Pvt Ltd · United States · Remote</p>
+              <p class="timeline-dates">Oct, 2025 – Present</p>
+            </div>
+            <div class="timeline-content">
+              <ul>
+                <li>Architected and delivered a multilingual AI frontdesk platform that automates inbound/outbound calls and chat for booking, cancelling, rescheduling, and updating appointments across enterprise healthcare and financial clients.</li>
+                <li>Designed a modular LLM/RAG pipeline combining fine-tuned LLMs, domain-specific knowledge bases, and intent/entity models to handle FAQs, complex inquiries, complaint logging, and admin workflows with high accuracy.</li>
+                <li>Built scalable voice and chat APIs (FastAPI + Docker + GKE) with real-time speech recognition and text generation, enabling the system to handle 1,000+ concurrent sessions with sub-100ms latency and 99.2% uptime.</li>
+                <li>Implemented MLOps on GCP and Vertex AI with GitHub Actions CI/CD, automating training, deployment, and rollback for multiple conversation, routing, and ranking models across environments.</li>
+                <li>Deployed and monitored services with centralized logging, metrics, and alerting (Prometheus/Grafana + cloud logging), reducing incident detection and resolution times for production issues.</li>
+                <li>Standardized experiment tracking and model governance using MLflow, versioned datasets, and registries, enabling reproducible experiments and faster iteration on new model variants.</li>
+                <li>Collaborated with product, operations, and client stakeholders to define success metrics (containment rate, call deflection, booking conversion), and continuously tuned flows to improve automation coverage and user experience.</li>
+              </ul>
+              <div class="tag-row">
+                <span class="tag">LLMs</span>
+                <span class="tag">RAG</span>
+                <span class="tag">Multilingual NLP</span>
+                <span class="tag">FastAPI</span>
+                <span class="tag">Docker</span>
+                <span class="tag">Kubernetes (GKE)</span>
+                <span class="tag">GCP</span>
+                <span class="tag">Vertex AI</span>
+                <span class="tag">MLflow</span>
+                <span class="tag">GitHub Actions</span>
+                <span class="tag">MLOps</span>
+              </div>
+            </div>
+          </article>
+
           <!-- Experience 1: Senior MLOps / ML Engineer -->
           <article class="timeline-item">
             <div class="timeline-meta">
               <h3>ML Engineer</h3>
               <p class="timeline-company">Jay Analytix · Toronto, Canada · Remote</p>
-              <p class="timeline-dates">Jan, 2025 – Present</p>
+              <p class="timeline-dates">Jan, 2025 – Oct, 2025</p>
             </div>
             <div class="timeline-content">
               <ul>
@@ -132,8 +165,8 @@
           <!-- Experience 2: AI / ML Engineer – Cancer Detection -->
           <article class="timeline-item">
             <div class="timeline-meta">
-              <h3>AI / ML Engineer – Cancer Detection</h3>
-              <p class="timeline-company">[Healthcare Client / Cancer Detection Project] · Remote[file:98]</p>
+              <h3>AI Engineer – Cancer Detection</h3>
+              <p class="timeline-company">ATEM [Japan, USA] · Remote</p>
               <p class="timeline-dates">2022 – 2024</p>
             </div>
             <div class="timeline-content">
