--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
                 <span class="tag">FastAPI</span>
                 <span class="tag">Docker</span>
                 <span class="tag">Kubernetes (GKE)</span>
-                <span class="tag">GCP</span>
-                <span class="tag">Vertex AI</span>
+                <span class="tag">GCP/Vertex AI</span>
                 <span class="tag">CI/CD</span>
                 <span class="tag">MLOps</span>
               </div>
