--- a/index.html
+++ b/index.html
@@ -197,23 +197,32 @@
           <!-- Experience 3: AI Engineer – GenAI & RAG -->
           <article class="timeline-item">
             <div class="timeline-meta">
-              <h3>AI Engineer – GenAI & RAG</h3>
-              <p class="timeline-company">Independent / Side Projects</p>
-              <p class="timeline-dates">2021 – Present</p>
+              <h3>Finance AI Analyst</h3>
+              <p class="timeline-company">CA Hemil Joshi and Associates · Onsite</p>
+              <p class="timeline-dates">May 2023 – Nov 2023</p>
             </div>
             <div class="timeline-content">
               <ul>
-                <li>Built production-ready RAG assistants over PDFs, internal docs, and product knowledge bases using OpenAI / open-source LLMs, vector databases, and LangChain.[file:98]</li>
-                <li>Designed retrieval pipelines (chunking, embeddings, semantic search, reranking) and prompt strategies to improve grounding, reduce hallucinations, and keep latency low.[file:98]</li>
-                <li>Integrated LLM APIs into web applications and internal tools with authentication, usage analytics, and observability for quality and cost control.[file:98]</li>
+                <li>Designed and developed an end‑to‑end FinTech AI platform that ingests invoices, financial documents, PDFs, and high‑quality images, transforming them into structured, analytics‑ready data using LLMs, NLP, and computer vision, cutting manual data-entry effort by ~70%.</li>
+                <li>Built a robust ingestion pipeline with OCR, layout‑aware parsing, and transformer‑based language models to detect and normalize key entities (amounts, dates, counterparties, line items, tax details, payment terms), improving extraction accuracy from ~85% to 97%+ on held‑out test sets.</li>
+                <li>Implemented multi‑stage NLP components (entity recognition, semantic parsing, rule‑based validation) that reduced downstream correction/reconciliation time by 60% and decreased finance ops escalations for data issues by ~40%.</li>
+                <li>Leveraged embeddings, semantic similarity, and RAG‑style retrieval over historical documents and reference tables to auto‑resolve ambiguous fields, shrinking average invoice processing time from days to minutes and accelerating monthly closing cycles.</li>
+                <li>Orchestrated automated workflows that clean, validate, and load extracted data into warehouses, enabling near real‑time spend analytics and contributing to an estimated annual savings of $150K+ in manual processing and outsourcing costs.</li>
+                <li>Exposed processed data through interactive dashboards and APIs, giving finance and operations teams live visibility into cash flow and vendor risk, which supported better negotiations and helped uncover ~3–5% cost inefficiencies across certain spend categories.</li>
+                <li>Productionized the solution using Python, PyTorch/Transformers, FastAPI, Docker, and cloud services with monitoring and logging, ensuring stable SLAs (p95 latency under 500 ms) even as document volume grew 3x.</li>
               </ul>
               <div class="tag-row">
                 <span class="tag">LLMs</span>
+                <span class="tag">Document AI</span>
+                <span class="tag">NLP</span>
+                <span class="tag">Computer Vision</span>
+                <span class="tag">OCR</span>
+                <span class="tag">Transformers</span>
+                <span class="tag">Embeddings</span>
                 <span class="tag">RAG</span>
-                <span class="tag">LangChain</span>
-                <span class="tag">Vector DB</span>
-                <span class="tag">OpenAI / Llama</span>
                 <span class="tag">Python</span>
+                <span class="tag">PyTorch / Transformers</span>
+                <span class="tag">FastAPI</span>
               </div>
             </div>
           </article>
