--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@
       </div>
     </section>
 
+    <br>
+    <div class="section-separator"></div>
+    <br>
+    
     <!-- Projects Section -->
     <section class="section section-alt" id="projects">
       <div class="container">
