--- a/index.html
+++ b/index.html
@@ -233,6 +233,76 @@
     <br>
     <div class="section-separator"></div>
     <br>
+
+    <section class="section" id="internship">
+      <div class="container">
+        <div class="section-header">
+          <h2>Internship Experience</h2>
+        </div>
+
+        <div class="timeline">
+          <!-- Experience 1 -->
+          <article class="timeline-item">
+            <div class="timeline-meta">
+              <h3>Data Analyst</h3>
+              <p class="timeline-company">AaNeel Infotech · United States · Onsite(India)</p>
+              <p class="timeline-dates">Jan 2023 – Apr 2023</p>
+            </div>
+            <div class="timeline-content">
+              <ul>
+                <li>Learned how to work with real-world healthcare data and production systems by supporting end-to-end analytics and reporting for a US-based healthcare organization.</li>
+                <li>Applied data analysis, EDA, and feature engineering skills in Python and Excel to understand doctor availability patterns and operational constraints across 11 hospital websites.</li>
+                <li>Designed and deployed an automated data pipeline that scraped real-time doctor availability using Python-based web scraping, then cleaned, normalized, and structured the data for downstream use.</li>
+                <li>Integrated the pipeline with Excel, a centralized database, and a live production website, improving data timeliness and reducing manual update effort by more than 70%.</li>
+                <li>Earned formal recognition (CEO award and return offer) for improving data accuracy, automation, and operational efficiency through this AI-driven data pipeline.</li>
+              </ul>
+              <div class="tag-row">
+                <span class="tag">Python</span>
+                <span class="tag">Web Scraping</span>
+                <span class="tag">Pandas</span>
+                <span class="tag">Data Cleaning</span>
+                <span class="tag">ETL Pipelines</span>
+                <span class="tag">Excel / Power Query</span>
+                <span class="tag">SQL</span>
+                <span class="tag">Healthcare Data</span>
+                <span class="tag">Dashboards</span>
+                <span class="tag">Automation</span>
+              </div>
+            </div>
+          </article>
+
+          <!-- Experience 1: Senior MLOps / ML Engineer -->
+          <article class="timeline-item">
+            <div class="timeline-meta">
+              <h3>Data Science Inte</h3>
+              <p class="timeline-company">LogicArt Technologies · Onsite</p>
+              <p class="timeline-dates">Jun 2022 – Dec 2022</p>
+            </div>
+            <div class="timeline-content">
+              <ul>
+                <li>Learned core data science fundamentals, including exploratory data analysis (EDA), data cleaning, and feature understanding using Python, Pandas, and NumPy.</li>
+                <li>Applied EDA techniques (summary statistics, correlations, outlier detection, missing‑value analysis) on real-world datasets to understand data quality and model readiness.</li>
+                <li>Built a small end-to-end EDA pipeline that automated data loading, preprocessing, and visualization, generating reusable insights for downstream ML experiments.</li>
+                <li>Practiced creating basic ML‑ready datasets by engineering simple features, encoding categorical variables, and splitting data into train/validation sets.</li>
+                <li>Documented findings and insights in notebooks, improving my ability to communicate data stories and prepare datasets for future AI/ML modeling work.</li>
+              </ul>
+              <div class="tag-row">
+                <span class="tag">Python</span>
+                <span class="tag">Pandas</span>
+                <span class="tag">NumPy</span>
+                <span class="tag">Exploratory Data Analysis (EDA)</span>
+                <span class="tag">Data Cleaning</span>
+                <span class="tag">Data Visualization</span>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <br>
+    <div class="section-separator"></div>
+    <br>
     
     <!-- Projects Section -->
     <section class="section section-alt" id="projects">
