--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           <!-- Experience 1: Senior MLOps / ML Engineer -->
           <article class="timeline-item">
             <div class="timeline-meta">
-              <h3>Data Science Inte</h3>
+              <h3>Data Science Intern</h3>
               <p class="timeline-company">LogicArt Technologies · Onsite</p>
               <p class="timeline-dates">Jun 2022 – Dec 2022</p>
             </div>
